@@ -21,8 +21,8 @@ xx-xxx-xxxx -- 3.3.719
          through mappings (#367)
 
     - Runtime
-       + The --max-malloced memory limit was renamed to --hard-memory-limit.
-       + Introduced new --soft-memory-limit in addition to the hard one.
+       + The --max-malloced memory limit was renamed to --hard-malloc-limit.
+       + Introduced new --soft-malloc-limit in addition to the hard one.
        + When exceeding the soft memory limit, the function low_memory() is
          called in the mudlib master with details about the kind of low memory
          situation. This check is done during the backend cycle and not at
